--- a/src/app/components/shared/match/match.component.html
+++ b/src/app/components/shared/match/match.component.html
@@ -45,7 +45,7 @@
         </mat-form-field>
       </form>
       <img src="/assets/flags/{{matchDetails.secondTeam.name}}.png" alt="" class="team__flag--small"
-           *ngIf="matchDetails.fistTeam.name.length > 0">
+           *ngIf="matchDetails.secondTeam.name.length > 0">
       <div class="team__name">{{matchDetails.secondTeam.name}}</div>
       <div class="match__container__small__date">
         {{matchDetails.date | date: "dd.MM.yyyy"}}
@@ -119,7 +119,7 @@
     </div>
     <div class="match__mobile__team">
       <img src="/assets/flags/{{matchDetails.secondTeam.name}}.png" alt="" class="team__flag--small"
-           *ngIf="matchDetails.fistTeam.name.length > 0">
+           *ngIf="matchDetails.secondTeam.name.length > 0">
       <div class="match__mobile__name">{{matchDetails.secondTeam.name}}</div>
     </div>
   </div>
