--- a/src/app/components/shared/match-predict/match-predict.component.html
+++ b/src/app/components/shared/match-predict/match-predict.component.html
@@ -1,6 +1,6 @@
 <div class="match__container__small">
   <div class="cell match__container__small__header">
-    {{match.matchNumber}} / {{match.stage}}
+    {{match.matchNumber}} / {{match.stage | translate}}
   </div>
   <div class="match__container__small__main">
     <div class="match__container__small_flag__name"
