--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,27 +7,26 @@
     <button mat-button class="navbar__button" [ngClass]="{'active_button' : currentPath('home')}"
             (click)="navigateTo('home')">
       <span class="material-icons">home</span>
-      <span class="navbar__button__title">Startseite</span>
+      <span class="navbar__button__title">{{ 'home' | translate}}</span>
     </button>
     <button mat-button class="navbar__button" [ngClass]="{'active_button' : currentPath('predict')}"
             (click)="navigateTo('predict')">
       <span class="material-icons">checklist</span>
-      <span class="navbar__button__title">Vorhersagen</span>
+      <span class="navbar__button__title">{{ 'predictions' | translate}}</span>
     </button>
     <button mat-button class="navbar__button" [ngClass]="{'active_button' : currentPath('login')}"
             (click)="navigateTo('login')" *ngIf="!checkIsLoggedIn()">
       <span class="material-icons">login</span>
-      <span class="navbar__button__title">Login</span>
+      <span class="navbar__button__title">{{ 'login' | translate}}</span>
     </button>
     <button mat-button [matMenuTriggerFor]="menu" class="navbar__button" *ngIf="checkIsLoggedIn()">
       <span class="material-icons">account_circle</span>
       <span class="navbar__button__title username">{{user.firstName}} {{user.lastName}}</span>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="logout()">Abmelden</button>
+      <button mat-menu-item (click)="logout()">{{ 'logout' | translate}}</button>
     </mat-menu>
-    <button mat-button class="navbar__button" (click)="navigateTo('about')">
-      <span class="material-icons">info</span>
-    </button>
+    <div mat-button class="navbar__button lang__button" (click)="switchLang('en')">EN</div>
+    <div mat-button class="navbar__button lang__button" (click)="switchLang('de')">DE</div>
   </div>
 </div>
