--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -65,3 +65,13 @@ Seitentiteln werden nicht angezeigt
     display: none;
   }
 }
+
+.lang__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  height: 100%;
+  width: 2rem;
+  cursor: pointer;
+}
