--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
 </button>
 -->
 <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
-<div class="home__scroll-top" *ngIf="pageYoffset > 1000">
+<div class="home__scroll-top" *ngIf="pageYOffset > 1000">
   <button mat-mini-fab color="primary" (click)="scrollToTop()">
     <mat-icon>arrow_upward</mat-icon>
   </button>
