--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -75,3 +75,11 @@ Seitentiteln werden nicht angezeigt
   width: 2rem;
   cursor: pointer;
 }
+
+.language__flag {
+  width: 1.7rem;
+}
+
+.austrian__flag {
+  width: 1.6rem;
+}
