--- a/src/app/components/shared/group-table/group-table.component.html
+++ b/src/app/components/shared/group-table/group-table.component.html
@@ -9,7 +9,7 @@
             <img src="/assets/flags/{{team.name}}.png" alt="" class="team__flag--small">
           </div>
           <div class="group-table__team-name" *ngIf="displayedColumn == 'name'">
-            {{team.name}}
+            {{team.name | translate}}
           </div>
           <div class="group-table__team__data" *ngIf="displayedColumn != 'flag' && displayedColumn != 'name'">
             {{team[displayedColumn]}}
